--- a/templates/actors/parts/stats/actor-injuries.hbs
+++ b/templates/actors/parts/stats/actor-injuries.hbs
@@ -1,4 +1,4 @@
-<div class="flexrow table-header resources-header no-wrap">
+<div class="flexrow table-header injuries-header no-wrap">
     <div class="flex2 center">
         <div class="field-label ellipsis">{{ localize 'COC.attributes.bg.label' }}</div>
     </div>
