--- a/templates/actors/parts/stats/actor-madness.hbs
+++ b/templates/actors/parts/stats/actor-madness.hbs
@@ -1,5 +1,5 @@
 {{#if (isEnabled "useMadness")}}
-<div class="flexrow table-header resources-header no-wrap">
+<div class="flexrow table-header madness-header no-wrap">
     <div class="flex2 center">
         <div class="field-label ellipsis">{{ localize 'COC.attributes.mad.label' }}</div>
     </div>
