--- a/scss/components/cocth/_actor.scss
+++ b/scss/components/cocth/_actor.scss
@@ -130,41 +130,20 @@ $resourcesColor:#6f4b93;
               .defence-header{ font-family: $font-secondary; color:$defenceColor; }
               .defence{ .cell-header{ background-color:$defenceColor } }
 
+              .injuries-header,
               .recovery-header,
               .vitality-header{ font-family: $font-secondary; color:$vitalityColor; }
-              .recovery, .vitality{ .cell-header{ background-color:$vitalityColor } }
+              .injuries,
+              .recovery,
+              .vitality{ .cell-header{ background-color:$vitalityColor } }
 
+              .madness-header,
               .resources-header{ font-family: $font-secondary; color:$resourcesColor; }
+              .madness,
               .resources{ .cell-header{ background-color:$resourcesColor } }
 
             }
             &.combat {
-              .inventory-list {
-                .item-list {
-                  .item {
-                    //.item-name {
-                    //  flex: 0 0 120px;
-                    //  //font-size: 12px;
-                    //  h4{
-                    //    text-align: left;
-                    //    word-break: break-word;
-                    //    @include ellipsis;
-                    //  }
-                    //}
-
-                    .item-subtype {
-                      //font-size: 10px;
-                      flex: 0 1 100px;
-                      font-size: 12px;
-                      color: $colorTan;
-                      text-align: center;
-                      border-right: 1px solid $colorFaint;
-                      word-break: break-word;
-                      @include ellipsis;
-                    }
-                  }
-                }
-              }
 
               .weapon {
                 .item-name {
