Ajout des macros Correction du bug d'affichage des fiches en mode "locked"

--- a/scss/components/base/_actor.scss
+++ b/scss/components/base/_actor.scss
@@ -14,7 +14,7 @@ $headerColor:black;
   height: 100%;
   overflow: hidden;
 
-  .editable {
+  &>form {
     @include nomargin;
     height: 100%;
     overflow: hidden;
