--- a/templates/items/parts/details/profile-details.hbs
+++ b/templates/items/parts/details/profile-details.hbs
@@ -90,7 +90,7 @@
             <a class="item-control item-create compendium-pack" data-pack="coc.paths" data-open="0" title="Ajouter une voie"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
-{{#each paths}}
+{{#each data.paths}}
     <ol class="item-list">
         <li class="item flexrow" data-item-id="{{_id}}" data-item-type="path" data-key="{{data.key}}" draggable="true">
             <div class="item-name flexrow">
