--- a/templates/items/parts/details/ranged-details.hbs
+++ b/templates/items/parts/details/ranged-details.hbs
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="form-group">
-    <label>Proriétés</label>
+    <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox">
             <input type="checkbox" name="data.properties.reloadable" {{checked item.data.properties.reloadable}}> {{localize "COC.properties.reloadable"}}
