--- a/templates/items/parts/details/spell-details.hbs
+++ b/templates/items/parts/details/spell-details.hbs
@@ -1,6 +1,6 @@
 <h3 class="form-header">Propriétés des sorts</h3>
 <div class="form-group">
-    <label>Proriétés</label>
+    <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox">
             <input type="checkbox" name="data.properties.activable" {{checked item.data.properties.activable}}> {{localize "COC.properties.activable"}}
