--- a/templates/items/parts/details/usage-details.hbs
+++ b/templates/items/parts/details/usage-details.hbs
@@ -1,6 +1,6 @@
 <h3 class="form-header">Usage</h3>
 <div class="form-group stacked">
-    <label>Proriétés</label>
+    <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox"><input type="checkbox" name="data.properties.proficient" {{checked data.properties.proficient}}> {{localize "COC.properties.proficient"}}</label>
         <label class="checkbox"><input type="checkbox" name="data.properties.predilection" {{checked data.properties.predilection}}> {{localize "COC.properties.predilection"}}</label>
