--- a/templates/items/parts/details/weapon-details.hbs
+++ b/templates/items/parts/details/weapon-details.hbs
@@ -57,7 +57,7 @@
     </div>
 </div>
 <div class="form-group">
-    <label>Proriétés</label>
+    <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox">
             <input type="checkbox" name="data.properties.bashing" {{checked item.data.properties.bashing}}> {{localize "COC.properties.bashing"}}
