Correction Equipe objet, augmente/diminue stack

--- a/templates/actors/parts/inventory/actor-inventory-item.hbs
+++ b/templates/actors/parts/inventory/actor-inventory-item.hbs
@@ -1,5 +1,5 @@
 <ol class="item-list">
-    <li class="item flexrow" data-item-id="{{_id}}" draggable="true">
+    <li class="item flexrow" data-item-id="{{_id}}" data-item-equipable="{{data.properties.equipable}}" data-item-stackable="{{data.properties.stackable}}"  data-item-consumable="{{data.properties.consumable}}" draggable="true">
         <div class="item-name flexrow">
             <div class="item-image" style="background-image: url('{{img}}')"></div>
             <h4>{{name}}</h4>
