--- a/templates/actors/parts/combat/actor-combat-item.hbs
+++ b/templates/actors/parts/combat/actor-combat-item.hbs
@@ -1,31 +1,32 @@
-<ol class="item-list">
-    <li class="item flexrow weapon" data-item-id="{{id}}" data-item-type="weapon" draggable="false">
-<!--        <div class="item-name" data-roll-type="weapon">-->
-        <div class="item-name flexrow" data-roll-type="weapon">
-            <div class="item-image weapon-image"></div>
-            <input class="field-value weapon-name" name="data.weapons.{{id}}.name" type="text" value="{{name}}" placeholder="{{ localize 'COC.weapons.name.abbrev' }}" data-dtype="String"/>
-        </div>
-        <div class="item-detail">
-            {{#if (isNull mod)}}
-                <input class="field-value weapon-mod" name="data.weapons.{{id}}.mod" type="text" value="" placeholder="{{ localize 'COC.weapons.mod.abbrev' }}" data-dtype="Number"/>
+<li class="item flexrow" data-item-id="{{_id}}" data-item-type="item" draggable="true">
+    <div class="item-name flexrow" data-roll-type="weapon">
+        <div class="item-image" style="background-image: url('{{img}}')"></div>
+        <h4>{{name}}</h4>
+    </div>
+    {{#if data.def}}<div class="item-detail">{{numberFormat data.def decimals=0 sign=true}}</div>{{else}}<div class="item-detail"></div>{{/if}}
+    <div class="item-detail">
+        {{#if data.properties.ranged}}{{data.range}}{{/if}}
+    </div>
+    <div class="item-detail">
+        {{#if (equals data.slot "hand")}}
+            {{#if (equals data.hands 2)}}
+                <i class="fas fa-hand-paper"></i><i class="fas fa-hand-paper"></i>
             {{else}}
-                <input class="field-value weapon-mod" name="data.weapons.{{id}}.mod" type="text" value="{{numberFormat mod decimals=0 sign=true}}" placeholder="{{ localize 'COC.weapons.mod.abbrev' }}" data-dtype="Number"/>
+                <i class="fas fa-hand-paper"></i>
             {{/if}}
-        </div>
-        <div class="item-detail">
-            {{#if (isNull critrange)}}
-                <input class="field-value weapon-critrange" name="data.weapons.{{id}}.critrange" type="text" value="20" placeholder="{{ localize 'COC.ui.critrange' }}" data-dtype="String"/>
-            {{else}}
-                <input class="field-value weapon-critrange" name="data.weapons.{{id}}.critrange" type="text" value="{{critrange}}" placeholder="{{ localize 'COC.ui.critrange' }}" data-dtype="String"/>
-            {{/if}}
-        </div>
-        <div class="item-damage">
-            <input class="field-value weapon-dmg" name="data.weapons.{{id}}.dmg" type="text" value="{{dmg}}" placeholder="{{ localize 'COC.weapons.dmg.abbrev' }}" data-dtype="String"/>
-        </div>
-        <div class="item-controls">
-            <a class="item-control rollable" data-roll-type="encounter-weapon"><i class="fas fa-dice-d20"></i></a>
-            <!--                    <a class="item-control rollable" data-roll-type="encounter-damage"><i class="fas fa-dice"></i></a>-->
-            <a class="item-control weapon-remove" title="Delete Item"><i class="fas fa-trash"></i></a>
-        </div>
-    </li>
-</ol>
+        {{/if}}
+    </div>
+    <div class="item-detail item-critrange">
+        {{#if data.properties.weapon}}{{data.critrange}}{{/if}}
+    </div>
+    <div class="item-detail item-mod" data-item-mod="{{data.mod}}">
+        {{#if data.properties.weapon}}{{data.mod}}{{/if}}
+    </div>
+    <div class="item-detail item-dmg" data-item-dmg="{{data.dmg}}">{{#if data.properties.weapon}}{{data.dmg}}{{/if}}</div>
+    <div class="item-controls">
+        {{#if data.properties.weapon}}
+            <a class="item-control rollable" data-roll-type="weapon"><i class="fas fa-dice-d20"></i></a>
+            <a class="item-control rollable" data-roll-type="damage"><i class="fas fa-dice"></i></a>
+        {{/if}}
+    </div>
+</li>
