--- a/templates/dialogs/roll-weapon-dialog.hbs
+++ b/templates/dialogs/roll-weapon-dialog.hbs
@@ -24,11 +24,6 @@
     </div>
     <div class="flex1 center cell">
         <input class="field-value readonly" id="mod" name="mod" type="text" readonly="true" value="{{numberFormat mod decimals=0 sign=true}}" data-dtype="Number"/>
-        {{!#if mod}}
-<!--            <input class="field-value readonly" id="mod" name="mod" type="text" readonly="true" value="{{numberFormat mod decimals=0 sign=true}}" data-dtype="Number"/>-->
-        {{!else}}
-<!--            <input class="field-value readonly" id="mod" name="mod" type="text" readonly="true" value="0" data-dtype="Number"/>-->
-        {{!/if}}
     </div>
 </div>
 <div class="row flexrow" style="margin-bottom: 1px;">
@@ -41,10 +36,18 @@
 </div>
 <div class="row flexrow" style="margin-bottom: 1px;">
     <div class="flex1 center bg-red">
-        <span class="field-label">{{localize 'COC.ui.bonus'}}/{{localize 'COC.ui.malus'}}</span>
+        <span class="field-label">{{localize 'COC.ui.bonus'}}</span>
     </div>
     <div class="flex1 center cell">
         <input class="field-value" id="bonus" name="bonus" type="text" value="{{numberFormat bonus decimals=0 sign=true}}" data-dtype="Number"/>
+    </div>
+</div>
+<div class="row flexrow" style="margin-bottom: 1px;">
+    <div class="flex1 center bg-red">
+        <span class="field-label">{{localize 'COC.ui.malus'}}</span>
+    </div>
+    <div class="flex1 center cell">
+        <input class="field-value" id="malus" name="malus" type="text" value="{{numberFormat malus decimals=0 sign=true}}" data-dtype="Number"/>
     </div>
 </div>
 <hr/>
@@ -60,49 +63,31 @@
 </div>
 <hr/>
 {{/if}}
+{{#if hasSkillDescr}}
+    <hr/>
+    <div>
+        <div class="flex1 center bg-darkslate">
+            <span class="field-label">Description</span>
+        </div>
+        <textarea class="readonly rollDialogDescr" readonly="true" id="skillDescr" name="skillDescr">{{skillDescr}}</textarea>
+    </div>
+{{/if}}
+
+{{#if (isEnabled "useComboRolls")}}
 <div class="row flexrow table-header red">
     <div class="flex1 center">
         <h3>{{localize 'COC.ui.damage'}}</h3>
     </div>
 </div>
 <!-- DAMAGES -->
-<div class="row flexrow" style="margin-bottom: 1px;">
-    <div class="flex1 center bg-red">
-        <span class="field-label">Formule</span>
+{{> "systems/coc/templates/dialogs/parts/roll-dmg-fields.hbs"}}
+{{/if}}
+{{#if hasDmgDescr}}
+    <hr/>
+    <div>
+        <div class="flex1 center bg-darkslate">
+            <span class="field-label">Description</span>
+        </div>
+        <textarea class="readonly rollDialogDescr" readonly="true" id="dmgDescr" name="dmgDescr">{{dmgDescr}}</textarea>
     </div>
-    <div class="flex1 center cell">
-        <input class="field-value readonly" id="formula" name="formula" type="text" readonly="true" value="{{formula}}" data-dtype="String" style="border:none;border-radius:0px;"/>
-    </div>
-</div>
-<!--<div class="row flexrow" style="margin-bottom: 1px;">-->
-<!--    <div class="flex1 center bg-red">-->
-<!--        <span class="field-label">Bonus/Malus</span>-->
-<!--    </div>-->
-<!--    <div class="flex1 center cell">-->
-<!--        <input class="field-value" id="bonus" name="bonus" type="text" value="{{!numberFormat bonus decimals=0 sign=true}}" data-dtype="Number" style="border:none;border-radius:0px;"/>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="row flexrow" style="margin-bottom: 1px;">-->
-<!--    <div class="flex1 center bg-red">-->
-<!--        <span class="field-label">Attaque puissante</span>-->
-<!--    </div>-->
-<!--    <div class="flex1 center cell">-->
-<!--        <input class="field-value" id="powerful" name="powerful" type="text" value="+2d6" data-dtype="String" style="border:none;border-radius:0px;"/>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="row flexrow" style="margin-bottom: 1px;">-->
-<!--    <div class="flex1 center bg-red">-->
-<!--        <span class="field-label">Attaque sournoise</span>-->
-<!--    </div>-->
-<!--    <div class="flex1 center cell">-->
-<!--        <input class="field-value" id="sneak" name="sneak" type="text" value="+4d6" data-dtype="String" style="border:none;border-radius:0px;"/>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="row flexrow" style="margin-bottom: 10px;">-->
-<!--    <div class="flex1 center bg-red">-->
-<!--        <span class="field-label">Formule personnalisée</span>-->
-<!--    </div>-->
-<!--    <div class="flex1 center cell">-->
-<!--        <input class="field-value" id="custom" name="custom" type="text" value="{{!custom}}" data-dtype="String" style="border:none;border-radius:0px;"/>-->
-<!--    </div>-->
-<!--</div>-->
+{{/if}}
