--- a/templates/actors/parts/stats/npc-attributes.hbs
+++ b/templates/actors/parts/stats/npc-attributes.hbs
@@ -12,7 +12,7 @@
         <div class="field-label">{{ localize 'COC.stats.tmpmod.abbrev' }}</div>
     </div>
 </div>
-{{#each actor.data.stats as |stat id|}}
+{{#each data.stats as |stat id|}}
 <div class="row flexrow no-wrap attributes">
     <div class="flex2 cell-header">
         <div class="flexrow no-wrap">
