Correction affichage des capacités d'une voie

--- a/templates/items/parts/details/path-details.hbs
+++ b/templates/items/parts/details/path-details.hbs
@@ -1,5 +1,6 @@
 {{> "systems/coc/templates/items/parts/details/setting-details.hbs"}}
 
+{{log 'path' this}}
 <h3 class="form-header">{{localize "COC.ui.properties"}}</h3>
 <input class="field-value" name="data.key" type="hidden" value="{{item.data.key}}" placeholder="{{ localize "COC.ui.key" }}" data-dtype="String">
 
@@ -21,7 +22,7 @@
             <a class="item-control item-create compendium-pack" data-pack="coc.capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
-    {{#each capacities as |capacity id|}}
+    {{#each data.capacities as |capacity id|}}
     <ol class="item-list">
         <li class="item flexrow" data-item-id="{{capacity._id}}" data-item-type="capacity" data-key="{{capacity.data.key}}" draggable="true">
             <div class="item-name flexrow">
