--- a/templates/items/item-sheet.hbs
+++ b/templates/items/item-sheet.hbs
@@ -25,7 +25,7 @@
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
         <a class="item active" data-tab="description">Description</a>
-        <a class="item" data-tab="details">Details</a>
+        <a class="item" data-tab="details">Détails</a>
     </nav>
     {{!-- Sheet Body --}}
     <section class="sheet-body">
