Ajout d'un acteur de type Rencontre

--- a/templates/actors/parts/stats/actor-stats.hbs
+++ b/templates/actors/parts/stats/actor-stats.hbs
@@ -3,8 +3,7 @@
         <!-- STATS -->
         {{#if (equals actor.type "character")}}
             {{> "systems/coc/templates/actors/parts/stats/actor-attributes.hbs"}}
-        {{/if}}
-        {{#if (equals actor.type "npc")}}
+        {{else}}
             {{> "systems/coc/templates/actors/parts/stats/npc-attributes.hbs"}}
         {{/if}}
     </div>
