--- a/templates/actors/parts/details/encounter-details.hbs
+++ b/templates/actors/parts/details/encounter-details.hbs
@@ -84,30 +84,16 @@
             <div class="flex1 center bg-header">
                 <span class="field-label">{{ localize 'COC.ui.boss' }}</span>
             </div>
-            <div class="flex1 center cell">
-<!--                <input class="field-value sans" name="data.boss.rank" type="text" value="{{actor.data.boss.rank}}" placeholder="{{ localize 'COC.ui.rank' }}" data-dtype="String"/>-->
+            <div class="flex2 center cell">
                 <select name="data.boss.rank" data-type="String" style="width:100%">
                     {{#select data.boss.rank}}
                         <option value="">{{localize "COC.None"}}</option>
-                        <option value="1">Boss 1 (Remarquable)</option>
-                        <option value="2">Boss 2 (Supérieur)</option>
-                        <option value="3">Boss 3 (Majeur)</option>
-                        <option value="4">Boss 4 (Exceptionnel)</option>
-                        <option value="5">Boss 5 (Légendaire)</option>
+                        <option value="1">Endurci</option>
+                        <option value="2">Expert</option>
+                        <option value="3">Elite</option>
+                        <option value="4">Légendaire</option>
                     {{/select}}
                 </select>
-            </div>
-            <div class="flex1 center cell">
-                <select name="data.boss.type" data-type="String" style="width:100%">
-                    {{#select data.boss.type}}
-                        <option value="">{{localize "COC.None"}}</option>
-                        <option value="rapide">Rapide</option>
-                        <option value="puissant">Puissant</option>
-                        <option value="berserk">Berserk</option>
-                        <option value="résistant">Résistant</option>
-                    {{/select}}
-                </select>
-
             </div>
         </div>
         <!-- /BOSS RANK -->
