--- a/templates/actors/parts/stats/actor-stats.hbs
+++ b/templates/actors/parts/stats/actor-stats.hbs
@@ -23,14 +23,17 @@
         <div class="flexrow"><div class="flex1 half-spacer"></div></div>
         <!-- DEFENSE -->
         {{> "systems/coc/templates/actors/parts/stats/actor-defence.hbs"}}
-    </div>
-    <div class="flex1 layout">
+    </div>    
+    {{#unless (equals actor.type "encounter")}}
+    <div class="flex1 layout">    
         <!-- RECOVERY -->
-        {{> "systems/coc/templates/actors/parts/stats/actor-recovery.hbs"}}
+        {{> "systems/coc/templates/actors/parts/stats/actor-recovery.hbs"}}        
         <!-- RESOURCES -->
         {{> "systems/coc/templates/actors/parts/stats/actor-resources.hbs"}}
-    </div>
+    </div>    
+    {{/unless}}
 </div>
+{{#unless (equals actor.type "encounter")}}
 <div class="flexrow no-wrap">
     <div class="flex1 layout">
         <!-- INJURIES -->
@@ -41,3 +44,4 @@
         {{> "systems/coc/templates/actors/parts/stats/actor-madness.hbs"}}
     </div>
 </div>
+{{/unless}}
