--- a/templates/items/parts/details/weapon-details.hbs
+++ b/templates/items/parts/details/weapon-details.hbs
@@ -1,4 +1,4 @@
-<h3 class="form-header">Propriétés d'armes</h3>
+<h3 class="form-header">Propriétés d'arme</h3>
 <div class="form-group">
     <label>{{localize "COC.ui.skill"}}</label>
     <div class="form-fields">
