--- a/templates/actors/parts/stats/encounter-stats.hbs
+++ b/templates/actors/parts/stats/encounter-stats.hbs
@@ -15,4 +15,10 @@
 </div>
 <div class="flexrow"><div class="flex1 half-spacer"></div></div>
 
-{{> "systems/coc/templates/actors/parts/combat/encounter-combat.hbs"}}
+<div class="flexrow">
+    {{> "systems/coc/templates/actors/parts/combat/encounter-combat.hbs"}}
+</div>
+
+<div class="flexrow">
+    {{> "systems/coc/templates/actors/parts/capacities/encounter-capacities.hbs"}}
+</div>
