--- a/templates/items/parts/details/encounter-weapon-details.hbs
+++ b/templates/items/parts/details/encounter-weapon-details.hbs
@@ -36,3 +36,11 @@
         <input name="data.weapon.dmgBonus" type="text" value="{{numberFormat data.weapon.dmgBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.dmgBonus"}}" data-dtype="Number">
     </div>
 </div>
+
+<h3 class="form-header">Autres</h3>
+<div class="form-group">
+    <label>{{localize "COC.ui.range"}}</label>
+    <div class="form-fields">
+        <input name="data.weapon.range" type="text" value="{{data.weapon.range}}" placeholder="{{localize "COC.ui.range"}}" data-dtype="String">
+    </div>
+</div>
