--- a/templates/actors/parts/combat/character-combat.hbs
+++ b/templates/actors/parts/combat/character-combat.hbs
@@ -5,8 +5,8 @@
                 <li class="inventory-header flexrow">
                     <h3 class="item-name flexrow">{{localize category.label}}</h3>
                     {{#if (isCategoryIn category.id "armor" "shield" "spell")}}<div class="item-detail">Def</div>{{else}}<div class="item-detail"></div>{{/if}}
-                    {{#if (isCategoryIn category.id "ranged" "spell")}}<div class="item-detail">Portée(m)</div>{{else}}<div class="item-detail"></div>{{/if}}
-                    {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">Crit</div>{{else}}<div class="item-detail"></div>{{/if}}
+                    {{#if (isCategoryIn category.id "ranged" "spell")}}<div class="item-detail">Portée</div>{{else}}<div class="item-detail"></div>{{/if}}
+                    {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">Critique</div>{{else}}<div class="item-detail"></div>{{/if}}
                     {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">Mod</div>{{else}}<div class="item-detail"></div>{{/if}}
                     {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">DM</div>{{else}}<div class="item-detail"></div>{{/if}}
                     <div class="item-controls"></div>
