Correction affichage type Item et jet de dommages

--- a/templates/actors/parts/capacities/encounter-capacities.hbs
+++ b/templates/actors/parts/capacities/encounter-capacities.hbs
@@ -1,3 +1,4 @@
+{{#if (gt capacities.length 0)}}
 <ol class="inventory-list">
      <li class="inventory-header flexrow">
             <h3 class="item-name flexrow">Capacités</h3>
@@ -30,3 +31,4 @@
         </li>
     {{/each}}
 </ol>
+{{/if}}
