--- a/templates/actors/parts/combat/encounter-combat.hbs
+++ b/templates/actors/parts/combat/encounter-combat.hbs
@@ -1,3 +1,4 @@
+{{#if (gt weapons.length 0)}}
 <ol class="inventory-list">
     <li class="inventory-header flexrow">
         <h3 class="item-name flexrow">Attaques</h3>
@@ -35,3 +36,4 @@
     {{/each}}
     </ol>
 </ol>
+{{/if}}
