--- a/templates/items/parts/details/item-details.hbs
+++ b/templates/items/parts/details/item-details.hbs
@@ -4,15 +4,9 @@
     <div class="form-fields">
         <select name="data.subtype" data-type="String" style="width:100%">
             {{#select data.subtype}}
-                <option value="">{{localize "COC.None"}}</option>
-                <option value="armor">{{localize "COC.category.armor"}}</option>
-                <option value="melee">{{localize "COC.category.melee"}}</option>
-                <option value="ranged">{{localize "COC.category.ranged"}}</option>
-                <option value="ammunition">{{localize "COC.category.ammunition"}}</option>
-                <option value="container">{{localize "COC.category.container"}}</option>
-                <option value="vehicle">{{localize "COC.category.vehicle"}}</option>
-                <option value="money">{{localize "COC.category.money"}}</option>
-                <option value="trapping">{{localize "COC.category.other"}}</option>
+                {{#each config.itemCategories as | category id |}}
+                    <option value="{{id}}">{{localize category}}</option>
+                {{/each}}
             {{/select}}
         </select>
     </div>
@@ -36,9 +30,6 @@
             <input type="checkbox" name="data.properties.ranged" {{checked data.properties.ranged}}> {{localize "COC.properties.ranged"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.spell" {{checked data.properties.spell}}> {{localize "COC.properties.spell"}}
-        </label>
-        <label class="checkbox">
             <input type="checkbox" name="data.properties.effects" {{checked data.properties.effects}}> {{localize "COC.properties.effects"}}
         </label>
     </div>
@@ -56,12 +47,12 @@
 {{#if data.properties.ranged}}
     {{> "systems/coc/templates/items/parts/details/ranged-details.hbs"}}
 {{/if}}
+{{#if data.properties.effects}}
+    {{> "systems/coc/templates/items/parts/details/effects-details.hbs"}}
+{{/if}}
 {{#if data.properties.spell}}
     {{> "systems/coc/templates/items/parts/details/spell-details.hbs"}}
 {{/if}}
 {{#if actor}}
-{{> "systems/coc/templates/items/parts/details/usage-details.hbs"}}
-{{/if}}
-{{#if data.properties.effects}}
-{{> "systems/coc/templates/items/parts/details/effects-details.hbs"}}
+    {{> "systems/coc/templates/items/parts/details/usage-details.hbs"}}
 {{/if}}
