--- a/templates/actors/parts/actor-tabs.hbs
+++ b/templates/actors/parts/actor-tabs.hbs
@@ -2,9 +2,10 @@
 <nav class="sheet-navigation tabs" data-group="primary">
     <a class="item" data-tab="stats">{{localize "COC.tabs.stats"}}</a>
     <a class="item" data-tab="combat">{{localize "COC.tabs.combat"}}</a>
-    <a class="item compendium-pack" data-pack="coc.items" data-open="0" data-tab="inventory">{{localize "COC.tabs.inventory"}}</a>
-    <a class="item compendium-pack" data-pack="coc.paths" data-open="0" data-tab="capacities">{{localize "COC.tabs.capacities"}}</a>
-    <a class="item" data-tab="description">{{localize "COC.tabs.description"}}</a>
+    <a class="item compendium-pack" data-pack="coc.items" data-open="0" data-tab="inventory" title="click droit pour ouvrir le compendium"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.inventory"}}</a>
+    <a class="item compendium-pack" data-pack="coc.paths" data-open="0" data-tab="capacities" title="click droit pour ouvrir le compendium"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.capacities"}}</a>
+    <a class="item" data-tab="effects">{{ localize "COC.tabs.effects" }}</a>
+    <a class="item" data-tab="description">{{localize "COC.tabs.description"}}</a>    
 </nav>
 {{!-- Sheet Body --}}
 <section class="sheet-body">
@@ -24,6 +25,9 @@
     <div class="tab capacities" data-group="primary" data-tab="capacities">
         {{> "systems/coc/templates/actors/parts/capacities/actor-paths.hbs"}}
     </div>
+    <div class="tab effects" data-group="primary" data-tab="effects">
+        {{> "systems/coc/templates/effects/effects.hbs"}}
+    </div>    
     <div class="tab description" data-group="primary" data-tab="description">
         {{#if (equals actor.type "character")}}
             {{> "systems/coc/templates/actors/parts/character-description.hbs"}}
