Correction clic droit onglet Capacités

--- a/templates/actors/parts/actor-tabs.hbs
+++ b/templates/actors/parts/actor-tabs.hbs
@@ -3,7 +3,7 @@
     <a class="item" data-tab="stats">{{localize "COC.tabs.stats"}}</a>
     <a class="item" data-tab="combat">{{localize "COC.tabs.combat"}}</a>
     <a class="item compendium-pack" data-pack="coc.items" data-open="0" data-tab="inventory" title="click droit pour ouvrir le compendium"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.inventory"}}</a>
-    <a class="item compendium-pack" data-pack="coc.paths" data-open="0" data-tab="capacities" title="click droit pour ouvrir le compendium"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.capacities"}}</a>
+    <a class="item compendium-pack" data-pack="coc.capacities" data-open="0" data-alternative-pack="coc.paths" data-alternative-open="0" data-tab="capacities" title="click droit pour ouvrir les capacités, SHIFT + click droit pour ouvrir les voies"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.capacities"}}</a>
     <a class="item" data-tab="effects">{{ localize "COC.tabs.effects" }}</a>
     <a class="item" data-tab="description">{{localize "COC.tabs.description"}}</a>    
 </nav>
