--- a/templates/actors/parts/details/actor-details.hbs
+++ b/templates/actors/parts/details/actor-details.hbs
@@ -27,7 +27,7 @@
             <div class="flex1 center cell-header">
                 <span class="field-label">Trait</span>
             </div>
-            <div class="flex2 center cell drop-field compendium-pack" data-pack="coc.traits" data-open="0" title="click droit pour ouvrir le compendium">
+            <div class="flex2 center cell drop-field compendium-pack" data-pack="coc.traits" data-open="0" title="clic droit pour ouvrir le compendium">
                 {{#with trait}}
                     <div class="flex5 drop-item item-name item trait" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
                     <div class="item" data-item-id="{{_id}}" style="padding-right:5px;">
@@ -42,14 +42,14 @@
             <div class="flex2 center cell-header">
                 <span class="field-label">{{ localize 'COC.details.profile' }}</span>
             </div>
-            <div class="flex4 center cell drop-field compendium-pack" data-pack="coc.profiles" data-open="0" title="click droit pour ouvrir le compendium">
             {{#with profile}}
-                <div class="flex5 drop-item item-name item profile" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
-                <div class="item" data-item-id="{{_id}}" style="padding-right:5px;">
-                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-times"></i></a>
+            <div class="flex4 center cell drop-field compendium-pack item" data-item-id="{{_id}}" data-item-type="item" data-pack="coc.profiles" data-open="0" title="clic droit pour ouvrir le compendium">            
+                <div class="flex5 drop-item item-name item profile item-edit" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
+                <div class="item" style="padding-right:5px;">
+                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-times"></i></a>
+                </div>
             </div>
-            {{/with}}
-            </div>
+            {{/with}}            
         </div>
         <!-- /PROFILE -->
     </div>
