--- a/templates/actors/parts/inventory/actor-inventory.hbs
+++ b/templates/actors/parts/inventory/actor-inventory.hbs
@@ -20,5 +20,5 @@
         {{/if}}
     {{/each}}
 {{else}}
-    <p class="empty">Votre inventaire est vide.</p>
+    <p class="empty">{{localize "COC.notification.emptyInventory"}}</p>
 {{/if}}
