Separation du module cocth et du systeme de base

--- a/templates/actors/parts/details/encounter-details.hbs
+++ b/templates/actors/parts/details/encounter-details.hbs
@@ -6,7 +6,7 @@
                 <span class="field-label">{{ localize 'COC.details.name' }}</span>
             </div>
             <div class="flex2 center cell">
-                <input class="field-value sans" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'COC.details.name' }}" data-dtype="String"/>
+                <input class="name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'COC.details.name' }}" data-dtype="String"/>
             </div>
         </div>
         <!-- /NAME -->
@@ -16,7 +16,7 @@
                 <span class="field-label">{{ localize 'COC.attributes.nc.abbrev' }}</span>
             </div>
             <div class="flex2 center cell">
-                <input class="field-value" name="data.nc.value" type="text" value="{{actor.data.nc.value}}" placeholder="{{ localize 'COC.attributes.nc.label' }}" data-dtype="Number"/>
+                <input class="level" name="data.nc.value" type="text" value="{{actor.data.nc.value}}" placeholder="{{ localize 'COC.attributes.nc.label' }}" data-dtype="Number"/>
             </div>
         </div>
         <!-- /NC -->
