Ajout du fond noir pour voir les icones

--- a/templates/actors/parts/capacities/encounter-capacities.hbs
+++ b/templates/actors/parts/capacities/encounter-capacities.hbs
@@ -14,7 +14,7 @@
             {{#each capacities as |capacity id|}}
                 <li class="item flexrow" data-item-id="{{_id}}" data-item-type="item" draggable="true">
                     <div class="item-name flexrow">
-                        <div class="item-image" style="background-image: url('{{img}}')"></div>
+                        <div class="item-image encounter-capacity-icon" style="background-image: url('{{img}}')"></div>
                         <h4>{{name}}</h4>
                     </div>
                     {{#with capacity}}
