--- a/templates/actors/parts/combat/encounter-combat.hbs
+++ b/templates/actors/parts/combat/encounter-combat.hbs
@@ -16,7 +16,7 @@
         {{#each weapons as |weapon id|}}
             <li class="item flexrow" data-item-id="{{_id}}" data-item-type="item" draggable="true">
                 <div class="item-name flexrow">
-                    <div class="item-image" style="background-image: url('{{img}}')"></div>
+                    <div class="item-image encounter-attack-icon" style="background-image: url('{{img}}')"></div>
                     <h4>{{name}}</h4>
                 </div>
                 {{#with data.weapon as |weapon|}}
