--- a/css/coc.css
+++ b/css/coc.css
@@ -1228,6 +1228,9 @@
   color: lightgray;
 }
 
-.effect-icon {
+.effect-icon,
+.encounter-attack-icon,
+.encounter-capacity-icon
+  {
   background-color: black;
 }
