Droits et visibilité

--- a/templates/actors/parts/inventory/actor-inventory-item.hbs
+++ b/templates/actors/parts/inventory/actor-inventory-item.hbs
@@ -21,8 +21,10 @@
         {{/if}}
     </div>
     {{/if}}
-    <div class="item-controls">
-        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-    </div>
+    {{#if @root.editable}}
+        <div class="item-controls">
+            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+    {{/if}}
 </li>
