--- a/templates/actors/parts/combat/character-combat-item.hbs
+++ b/templates/actors/parts/combat/character-combat-item.hbs
@@ -3,21 +3,25 @@
         <div class="item-image" style="background-image: url('{{img}}')"></div>
         <h4>{{name}}</h4>
     </div>
-    {{#if data.def}}<div class="item-detail">{{numberFormat data.def decimals=0 sign=true}}</div>{{else}}<div class="item-detail"></div>{{/if}}
-    <div class="item-detail">
-        {{#if data.properties.ranged}}{{data.range}}{{/if}}
-    </div>
-    <div class="item-detail item-critrange">
-        {{#if data.properties.weapon}}{{data.critrange}}{{/if}}
-    </div>
-    <div class="item-detail item-mod" data-item-mod="{{data.mod}}">
-        {{#if data.properties.weapon}}{{data.mod}}{{/if}}
-    </div>
-    <div class="item-detail item-dmg" data-item-dmg="{{data.dmg}}">{{#if data.properties.weapon}}{{data.dmg}}{{/if}}</div>
-    <div class="item-controls">
-        {{#if data.properties.weapon}}
-            <a class="item-control rollable" data-roll-type="weapon"><i class="fas fa-dice-d20"></i></a>
-            <a class="item-control rollable" data-roll-type="damage"><i class="fas fa-dice"></i></a>
+    {{#if (isNotLimited @root)}}
+        {{#if data.def}}<div class="item-detail">{{numberFormat data.def decimals=0 sign=true}}</div>{{else}}<div class="item-detail"></div>{{/if}}
+        <div class="item-detail">
+            {{#if data.properties.ranged}}{{data.range}}{{/if}}
+        </div>
+        <div class="item-detail item-critrange">
+            {{#if data.properties.weapon}}{{data.critrange}}{{/if}}
+        </div>
+        <div class="item-detail item-mod" data-item-mod="{{data.mod}}">
+            {{#if data.properties.weapon}}{{data.mod}}{{/if}}
+        </div>
+        <div class="item-detail item-dmg" data-item-dmg="{{data.dmg}}">{{#if data.properties.weapon}}{{data.dmg}}{{/if}}</div>
+        {{#if @root.editable}}
+            <div class="item-controls">
+                {{#if data.properties.weapon}}
+                    <a class="item-control rollable" data-roll-type="weapon"><i class="fas fa-dice-d20"></i></a>
+                    <a class="item-control rollable" data-roll-type="damage"><i class="fas fa-dice"></i></a>
+                {{/if}}
+            </div>
         {{/if}}
-    </div>
+    {{/if}}
 </li>
