--- a/templates/actors/parts/details/actor-details.hbs
+++ b/templates/actors/parts/details/actor-details.hbs
@@ -11,46 +11,50 @@
         </div>
         <!-- /NAME -->
         <!-- LEVEL -->
-        <div class="flexrow">
-            <div class="flex1 center cell-header">
-                <span class="field-label">{{ localize 'COC.attributes.level.label' }}</span>
+        {{#if (isNotLimited @root)}}
+            <div class="flexrow">
+                <div class="flex1 center cell-header">
+                    <span class="field-label">{{ localize 'COC.attributes.level.label' }}</span>
+                </div>
+                <div class="flex2 center cell">
+                    <input class="level" name="data.level.value" type="text" value="{{actor.data.level.value}}" placeholder="Level" data-dtype="Number"/>
+                </div>
             </div>
-            <div class="flex2 center cell">
-                <input class="level" name="data.level.value" type="text" value="{{actor.data.level.value}}" placeholder="Level" data-dtype="Number"/>
-            </div>
-        </div>
+        {{/if}}
         <!-- /LEVEL -->
     </div>
-    <div class="flex1 layout">
-        <!-- FAMILY -->
-        <div class="flexrow">
-            <div class="flex1 center cell-header">
-                <span class="field-label">Trait</span>
+    <div class="flex1 layout">        
+        {{#if (isNotLimited @root)}}
+            <!-- TRAIT -->
+            <div class="flexrow">
+                <div class="flex1 center cell-header">
+                    <span class="field-label">Trait</span>
+                </div>
+                <div class="flex2 center cell drop-field compendium-pack" data-pack="coc.traits" data-open="0" title="clic droit pour ouvrir le compendium">
+                    {{#with trait}}
+                        <div class="flex5 drop-item item-name item trait" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
+                        <div class="item" data-item-id="{{_id}}" style="padding-right:5px;">
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-times"></i></a>
+                        </div>
+                    {{/with}}
+                </div>
             </div>
-            <div class="flex2 center cell drop-field compendium-pack" data-pack="coc.traits" data-open="0" title="clic droit pour ouvrir le compendium">
-                {{#with trait}}
-                    <div class="flex5 drop-item item-name item trait" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
+            <!-- /TRAIT -->
+            <!-- PROFILE -->        
+            <div class="flexrow">
+                <div class="flex2 center cell-header">
+                    <span class="field-label">{{ localize 'COC.details.profile' }}</span>
+                </div>
+                <div class="flex4 center cell drop-field compendium-pack item" data-item-id="{{profile._id}}" data-pack="coc.profiles" data-open="0" title="clic droit pour ouvrir le compendium">
+                {{#with profile}}
+                    <div class="flex5 drop-item item-name item profile item-edit" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
                     <div class="item" data-item-id="{{_id}}" style="padding-right:5px;">
-                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-times"></i></a>
-                    </div>
+                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-times"></i></a>
+                </div>
                 {{/with}}
+                </div>       
             </div>
-        </div>
-        <!-- /FAMILY -->
-        <!-- PROFILE -->
-        <div class="flexrow">
-            <div class="flex2 center cell-header">
-                <span class="field-label">{{ localize 'COC.details.profile' }}</span>
-            </div>
-            <div class="flex4 center cell drop-field compendium-pack item" data-item-id="{{profile._id}}" data-pack="coc.profiles" data-open="0" title="clic droit pour ouvrir le compendium">
-            {{#with profile}}
-                <div class="flex5 drop-item item-name item profile item-edit" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
-                <div class="item" data-item-id="{{_id}}" style="padding-right:5px;">
-                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-times"></i></a>
-            </div>
-            {{/with}}
-            </div>       
-        </div>
-        <!-- /PROFILE -->
+            <!-- /PROFILE -->
+        {{/if}}
     </div>
 </div>
