--- a/templates/actors/parts/details/encounter-details.hbs
+++ b/templates/actors/parts/details/encounter-details.hbs
@@ -11,14 +11,16 @@
         </div>
         <!-- /NAME -->
         <!-- NC -->
-        <div class="row flexrow">
-            <div class="flex1 center bg-header">
-                <span class="field-label">{{ localize 'COC.attributes.nc.abbrev' }}</span>
+        {{#if (isNotLimited @root)}}
+            <div class="row flexrow">
+                <div class="flex1 center bg-header">
+                    <span class="field-label">{{ localize 'COC.attributes.nc.abbrev' }}</span>
+                </div>
+                <div class="flex2 center cell">
+                    <input class="level" name="data.nc.value" type="text" value="{{actor.data.nc.value}}" placeholder="{{ localize 'COC.attributes.nc.label' }}" data-dtype="Number"/>
+                </div>
             </div>
-            <div class="flex2 center cell">
-                <input class="level" name="data.nc.value" type="text" value="{{actor.data.nc.value}}" placeholder="{{ localize 'COC.attributes.nc.label' }}" data-dtype="Number"/>
-            </div>
-        </div>
+        {{/if}}
         <!-- /NC -->
         <!-- SIZE -->
         <div class="row flexrow">
@@ -43,59 +45,61 @@
         <!-- /SIZE -->
     </div>
     <div class="flex1">
+        {{#if (isNotLimited @root)}}
         <!-- ARCHETYPE -->
-        <div class="row flexrow">
-            <div class="flex1 center bg-header">
-                <span class="field-label">{{ localize 'COC.ui.archetype' }}</span>
+            <div class="row flexrow">
+                <div class="flex1 center bg-header">
+                    <span class="field-label">{{ localize 'COC.ui.archetype' }}</span>
+                </div>
+                <div class="flex2 center cell">
+                    <select name="data.archetype" data-type="String" style="width:100%">
+                        {{#select data.archetype}}
+                            <option value="">{{localize "COC.None"}}</option>
+                            <option value="standard">Standard</option>
+                            <option value="rapide">Rapide</option>
+                            <option value="puissant">Puissant</option>
+                            <option value="inférieur">Inférieur</option>
+                        {{/select}}
+                    </select>
+                </div>
             </div>
-            <div class="flex2 center cell">
-                <select name="data.archetype" data-type="String" style="width:100%">
-                    {{#select data.archetype}}
-                        <option value="">{{localize "COC.None"}}</option>
-                        <option value="standard">Standard</option>
-                        <option value="rapide">Rapide</option>
-                        <option value="puissant">Puissant</option>
-                        <option value="inférieur">Inférieur</option>
-                    {{/select}}
-                </select>
-            </div>
-        </div>
-        <!-- /ARCHETYPE -->
-        <!-- CATEGORY -->
-        <div class="row flexrow">
-            <div class="flex1 center bg-header">
-                <span class="field-label">{{ localize 'COC.ui.category' }}</span>
-            </div>
-            <div class="flex2 center cell">
-                <select name="data.category" data-type="String" style="width:100%">
-                    {{#select data.category}}
-                        <option value="">{{localize "COC.None"}}</option>
-                        <option value="vivante">Vivante</option>
-                        <option value="humanoïde">Humanoïde</option>
-                        <option value="non-vivante">Non-vivante</option>
-                    {{/select}}
-                </select>
+            <!-- /ARCHETYPE -->
+            <!-- CATEGORY -->
+            <div class="row flexrow">
+                <div class="flex1 center bg-header">
+                    <span class="field-label">{{ localize 'COC.ui.category' }}</span>
+                </div>
+                <div class="flex2 center cell">
+                    <select name="data.category" data-type="String" style="width:100%">
+                        {{#select data.category}}
+                            <option value="">{{localize "COC.None"}}</option>
+                            <option value="vivante">Vivante</option>
+                            <option value="humanoïde">Humanoïde</option>
+                            <option value="non-vivante">Non-vivante</option>
+                        {{/select}}
+                    </select>
 
+                </div>
             </div>
-        </div>
-        <!-- /CATEGORY -->
-        <!-- BOSS RANK -->
-        <div class="row flexrow">
-            <div class="flex1 center bg-header">
-                <span class="field-label">{{ localize 'COC.ui.boss' }}</span>
+            <!-- /CATEGORY -->
+            <!-- BOSS RANK -->
+            <div class="row flexrow">
+                <div class="flex1 center bg-header">
+                    <span class="field-label">{{ localize 'COC.ui.boss' }}</span>
+                </div>
+                <div class="flex2 center cell">
+                    <select name="data.boss.rank" data-type="String" style="width:100%">
+                        {{#select data.boss.rank}}
+                            <option value="">{{localize "COC.None"}}</option>
+                            <option value="1">Endurci</option>
+                            <option value="2">Expert</option>
+                            <option value="3">Elite</option>
+                            <option value="4">Légendaire</option>
+                        {{/select}}
+                    </select>
+                </div>
             </div>
-            <div class="flex2 center cell">
-                <select name="data.boss.rank" data-type="String" style="width:100%">
-                    {{#select data.boss.rank}}
-                        <option value="">{{localize "COC.None"}}</option>
-                        <option value="1">Endurci</option>
-                        <option value="2">Expert</option>
-                        <option value="3">Elite</option>
-                        <option value="4">Légendaire</option>
-                    {{/select}}
-                </select>
-            </div>
-        </div>
-        <!-- /BOSS RANK -->
+            <!-- /BOSS RANK -->
+        {{/if}}
     </div>
 </div>
