--- a/templates/actors/parts/encounter-tabs.hbs
+++ b/templates/actors/parts/encounter-tabs.hbs
@@ -1,18 +1,26 @@
 {{!-- Sheet Tab Navigation --}}
-<nav class="sheet-navigation tabs" data-group="primary">
-    <a class="item" data-tab="stats">{{localize "COC.tabs.stats"}}</a>
+<nav class="sheet-navigation tabs" data-group="primary">    
+    {{#if (isNotLimited @root)}}
+        <a class="item" data-tab="stats">{{localize "COC.tabs.stats"}}</a>
+    {{/if}}
     <a class="item" data-tab="description">{{localize "COC.tabs.description"}}</a>
-    <a class="item" data-tab="effects">{{ localize "COC.tabs.effects" }}</a> 
+    {{#if (isNotLimited @root)}}
+        <a class="item" data-tab="effects">{{ localize "COC.tabs.effects" }}</a> 
+    {{/if}}
 </nav>
 {{!-- Sheet Body --}}
 <section class="sheet-body">
-    <div class="tab stats" data-group="primary" data-tab="stats">
-        {{> "systems/coc/templates/actors/parts/stats/encounter-stats.hbs"}}
-    </div>
-    <div class="tab effects" data-group="primary" data-tab="effects">
-        {{> "systems/coc/templates/effects/effects.hbs"}}
-    </div>
+    {{#if (isNotLimited @root)}}
+        <div class="tab stats" data-group="primary" data-tab="stats">
+            {{> "systems/coc/templates/actors/parts/stats/encounter-stats.hbs"}}
+        </div>
+    {{/if}}
     <div class="tab description" data-group="primary" data-tab="description">
         {{> "systems/coc/templates/actors/parts/actor-description.hbs"}}
     </div>
+    {{#if (isNotLimited @root)}}
+        <div class="tab effects" data-group="primary" data-tab="effects">
+            {{> "systems/coc/templates/effects/effects.hbs"}}
+        </div>
+    {{/if}}
 </section>
