--- a/templates/actors/parts/inventory/actor-inventory.hbs
+++ b/templates/actors/parts/inventory/actor-inventory.hbs
@@ -7,9 +7,11 @@
                     <div class="item-detail">{{localize "COC.ui.qty"}}</div>
                     <div class="item-detail"><i title="Prix" class="fas fa-coins" style="color:silver"></i></div>
                     {{#if (or (equals ../actor.type "character") (equals ../actor.type "npc"))}}<div class="item-detail">Action</div>{{/if}}
-                    <div class="item-controls">
-                        <a class="item-control item-create compendium-pack" data-pack="coc.items" data-open="0" title="Ajouter un objet"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
-                    </div>
+                    {{#if @root.editable}}
+                        <div class="item-controls">
+                            <a class="item-control item-create compendium-pack" data-pack="coc.items" data-open="0" title="Ajouter un objet"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
+                        </div>
+                    {{/if}}
                 </li>
                 <ol class="item-list" {{#if (includes ../folded.inventory category.id)}}style="display: none;"{{/if}}>
                 {{#each category.items as |item id|}}
