--- a/templates/items/item-sheet.hbs
+++ b/templates/items/item-sheet.hbs
@@ -15,40 +15,44 @@
             </div>
         </div>
     </header>
+    {{#if (isNotLimited @root)}}
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
         <a class="item active" data-tab="description">{{localize "COC.tabs.description"}}</a>
         <a class="item" data-tab="details">{{localize "COC.tabs.details"}}</a>
         <a class="item" data-tab="effets">{{localize "COC.tabs.effects"}}</a>
     </nav>
+    {{/if}}
     {{!-- Sheet Body --}}
     <section class="sheet-body">
         <div class="tab flexrow active no-wrap" data-group="primary" data-tab="description">
             {{> "systems/coc/templates/items/parts/properties/item-properties.hbs"}}
             {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
         </div>
-        <div class="tab details" data-group="primary" data-tab="details">
-            {{#if (equals item.type "item")}}
-                {{> "systems/coc/templates/items/parts/details/item-details.hbs"}}
-            {{/if}}
-            {{#if (equals item.type "trait")}}
-                {{> "systems/coc/templates/items/parts/details/trait-details.hbs"}}
-            {{/if}}
-            {{#if (equals item.type "capacity")}}
-                {{> "systems/coc/templates/items/parts/details/capacity-details.hbs"}}
-            {{/if}}
-            {{#if (equals item.type "path")}}
-                {{> "systems/coc/templates/items/parts/details/path-details.hbs"}}
-            {{/if}}
-            {{#if (equals item.type "profile")}}
-                {{> "systems/coc/templates/items/parts/details/profile-details.hbs"}}
-            {{/if}}
-            {{#if (equals item.type "encounterWeapon")}}
-                {{> "systems/coc/templates/items/parts/details/encounter-weapon-details.hbs"}}
-            {{/if}}
-        </div>
-        <div class="tab" data-group="primary" data-tab="effets">
-            {{> "systems/coc/templates/effects/effects.hbs"}}            
-        </div>
+        {{#if (isNotLimited @root)}}
+            <div class="tab details" data-group="primary" data-tab="details">
+                {{#if (equals item.type "item")}}
+                    {{> "systems/coc/templates/items/parts/details/item-details.hbs"}}
+                {{/if}}
+                {{#if (equals item.type "trait")}}
+                    {{> "systems/coc/templates/items/parts/details/trait-details.hbs"}}
+                {{/if}}
+                {{#if (equals item.type "capacity")}}
+                    {{> "systems/coc/templates/items/parts/details/capacity-details.hbs"}}
+                {{/if}}
+                {{#if (equals item.type "path")}}
+                    {{> "systems/coc/templates/items/parts/details/path-details.hbs"}}
+                {{/if}}
+                {{#if (equals item.type "profile")}}
+                    {{> "systems/coc/templates/items/parts/details/profile-details.hbs"}}
+                {{/if}}
+                {{#if (equals item.type "encounterWeapon")}}
+                    {{> "systems/coc/templates/items/parts/details/encounter-weapon-details.hbs"}}
+                {{/if}}
+            </div>
+            <div class="tab" data-group="primary" data-tab="effets">
+                {{> "systems/coc/templates/effects/effects.hbs"}}            
+            </div>
+        {{/if}}
     </section>
 </form>
